# Mad-at-ZJUSE

./: README.md
B:S体系软件设计/: README.md
B:S体系软件设计/src/: app.py  init.py
大规模信息系统构建技术导论/: .gitignore  LICENSE  README.md  init.sql
大规模信息系统构建技术导论/dependencies/: zoo.cfg
大规模信息系统构建技术导论/front/: package-lock.json  package.json  vue.config.js
大规模信息系统构建技术导论/master/: .gitignore  pom.xml
大规模信息系统构建技术导论/regionServer/: pom.xml
思政/: 习思想.docx
数据库系统/: README.md
数据库系统/Project/: F_Borrow.frm  F_Load.frm  F_Manage.frm  F_Query.frm  F_SignIn.frm  login.frm  main_admin.frm  mian_user.frm  neo_reader.frm  工程1.vbp  工程1.vbw
数据库系统/Report/: MiniSQL个人报告.md
数据挖掘导论/: .gitignore
数据挖掘导论/Project/: src.ipynb  开题报告.md
编译原理/: .gitignore  CMakeLists.txt  Makefile  README.md
编译原理/src/: Makefile  context.cpp  context.h  genCode.cpp  genJSON.cpp  lex.l  main.cpp  node.h  parse.y  util.cpp  util.h
编译原理/test/: Makefile
编译原理/visual/: Makefile  index.html
网络安全原理与实践/assignment/: Answer.md
网络安全原理与实践/labs/: Template.doc
计算机系统概论/: README.md  datapath.pptx
计算机网络/: README.txt
计算机网络/Homework/: Chapter 2.md  Chapter 5.docx  Chapter 6-7.docx  final.docx
软件工程基础/src/: icons.html  index.html  typography.html  个人资金信息.html  交易记录.html  取款.html  存款.html  登录.html  股票信息.html  股票出售.html  股票购买.html
软件工程基础/text/: 设计报告汇总.docx
软件工程管理/docs/: README.md
软件工程管理/slides/: 开题.pptx
软工基/src/: icons.html  index.html  typography.html  个人资金信息.html  交易记录.html  修改密码.html  取款.html  存款.html  股票信息.html  股票出售.html  股票购买.html
面向对象程序设计/: README.md
面向对象程序设计/pokermaster/: README.txt
面向对象程序设计/src/: TEMP.pro  (+14 more)
(+153 files in other folders)
